--- a/about.html
+++ b/about.html
@@ -189,7 +189,7 @@
 									<div class="opacity tran4s">
 										<h4>KHUSHI SHROFF</h4>
 										<span>Feel free to connect with me</span>
-										<p style="min-height:60%;">Electronics and Communication student and also expertised in Frontend Web development and Graphic Designer.You can also check my Coding_Ranger instagram account.</p>
+										<p style="min-height:60%;">>E&C student, Expertised in Frontend development.You can also check my Coding_Ranger instagram account.</p>
 									</div>
 								</div> <!-- /.img -->
 								<div class="member-name">
@@ -212,7 +212,7 @@
 									<div class="opacity tran4s">
 										<h4>SAHIL KASEKAR</h4>
 										<span>Always eager to learn new technologies</span>
-										<p style="min-height:60%;">I am an E&C student with expertise in Frontend and Python, currently learning Backend web development. I also have a strong interest in Embedded systems, IOT, and Arduino.</p>
+										<p style="min-height:60%;">E&C student with expertise in Frontend and Python, currently learning Backend.strong interest in Embedded, IOT & Arduino.</p>
 									</div>
 								</div> <!-- /.img -->
 								<div class="member-name">
