--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                                     <ul class="submenu">
                                                         <li><a href="blog.html">Gate'23</a></li>
                                                         <li><a href="blog_details.html">Internship Opportunities</a></li>
-                                                        <li><a href="stuff2.html">Interesting Stuff</a></li>
+                                                        <li><a href="stuff.html">Interesting Stuff</a></li>
                                                         
                                                     </ul>
                                                 </li>
