--- a/stuff.html
+++ b/stuff.html
@@ -295,6 +295,13 @@
                       </div>
                     </div>
                   </div>
+                    <div class="row justify-content-center" style="text-align: center;">
+                    <div class="col-xl-12" >
+                        <div class="section-tittle text-center mt-20" >
+                            <a href="https://www.futurepedia.io/" target="_blank" class="border-btn">View More AI Tools</a>
+                        </div>
+                    </div>
+                </div>
                 </div>
               </div>
             </div>
