Updated cpyright year and contact mail

--- a/contact.html
+++ b/contact.html
@@ -128,7 +128,7 @@
                 <div class="left"></div>
                 <div class="right">
                     <h2>Get In Touch</h2>
-                    <form name="get-in-touch" id="form_start" method="POST" action="mailto:kkhushi3058@gmail.com" enctype="text/plain">
+                    <form name="get-in-touch" id="form_start" method="POST" action="mailto:jmaitreya1809@gmail.com" enctype="text/plain">
                     <input type="text" required name="name"  class="field" placeholder="Your Name">
                     <input type="email" name="email" required class="field" placeholder="Your Email">
                     <input type="text" name="subject" required class="field" placeholder="Subject">
@@ -185,7 +185,7 @@
                            <div class="col-xl-12 ">
                                <div class="footer-copy-right text-center">
                                    
-                                     <h4>Copyright ©2023 All rights reserved | This is made with <i class="fa fa-heart" aria-hidden="true"></i>  by  CommuniCore
+                                     <h4>Copyright ©2024 All rights reserved | This is made with <i class="fa fa-heart" aria-hidden="true"></i>  by  CommuniCore
                                      </h4>
                                  </div>
                              </div>
