--- a/courses.html
+++ b/courses.html
@@ -292,8 +292,8 @@
                     <div class="contact-form padd_side_15">
                         <h3 style="margin-left: 0.8rem;">DISCLAIMER</h3>
                         <br>
-                        <div  style="max-width:58.5rem; color: rgb(239, 239, 239); font-size: 1.3rem;margin-bottom: 1rem; margin-right: 0.9rem; margin-left:0.8rem ;">We would like to acknowledge the resources and third-party materials used in the development of our website. We give credit to any and all external sources that have helped make our site a success. Please note that some of the information and images used on our website may have been sourced from external sources and we do not claim ownership over them. If you notice any discrepancies or have any concerns, please contact us and we will make the necessary adjustments. Thank you for visiting our website. </div>
-                        
+                        <div  style="max-width:58.5rem; color: rgb(239, 239, 239); font-size: 1.3rem;margin-bottom: 1rem; margin-right: 0.95rem; margin-left:0.8rem ;">We strive to acknowledge and credit all resources, materials, and inspirations utilized in building our website. Some images, text, or external resources featured here are used under fair use for educational purposes, and we do not claim ownership unless explicitly stated. Should you find any content that needs correction or removal, please contact us directly, and we will promptly address your concerns.</div>
+                        <div  style="max-width:58.5rem; color: rgb(239, 239, 239); font-size: 1.3rem;margin-bottom: 1rem; margin-right: 0.95rem; margin-left:0.8rem ;">Thank you for being part of our community! </div>
                     </div>
                    </div>
                    </div>
