--- a/blog_details.html
+++ b/blog_details.html
@@ -68,6 +68,7 @@
                                                         <li><a href="blog.html">Gate'23</a></li>
                                                         <li><a href="blog_details.html">Internship Opportunities</a></li>
                                                         <li><a href="stuff.html">Interesting Stuff</a></li>
+                                                        <li><a href="online_stuff.html">Projects and Tutorials</a></li>
                                                         
                                                     </ul>
                                                 </li>
