--- a/courses.html
+++ b/courses.html
@@ -69,6 +69,7 @@
                                                         <li><a href="blog.html">Gate'23</a></li>
                                                         <li><a href="blog_details.html">Internship Opportunities</a></li>
                                                         <li><a href="stuff.html">Interesting Stuff</a></li>
+                                                        <li><a href="online_stuff.html">Projects and Tutorials</a></li>
                                                         
                                                     </ul>
                                                 </li>
