--- a/about.html
+++ b/about.html
@@ -67,8 +67,7 @@
                                                 <li><a href="about.html">About</a></li>
                                                 <li><a href="#">Resources</a>
                                                     <ul class="submenu">
-                                                        <li><a href="blog.html">Gate'23</a></li>
-                                                        <li><a href="blog_details.html">Internship Opportunities</a></li>
+                                                        <li><a href="pyqs.html">Academic Materials</a></li>
                                                         <li><a href="stuff.html">Interesting Stuff</a></li>
                                                         <li><a href="online_stuff.html">Projects and Tutorials</a></li>
                                                         
