--- a/courses.html
+++ b/courses.html
@@ -66,8 +66,7 @@
                                                 <li><a href="about.html">About</a></li>
                                                 <li><a href="#">Resources</a>
                                                     <ul class="submenu">
-                                                        <li><a href="blog.html">Gate'23</a></li>
-                                                        <li><a href="blog_details.html">Internship Opportunities</a></li>
+                                                        <li><a href="pyqs.html">Academic Materials</a></li>
                                                         <li><a href="stuff.html">Interesting Stuff</a></li>
                                                         <li><a href="online_stuff.html">Projects and Tutorials</a></li>
                                                         
@@ -104,7 +103,7 @@
                         <div class="row">
                             <div class="col-xl-8 col-lg-11 col-md-12">
                                 <div class="hero__caption hero__caption2">
-                                    <h1 data-animation="bounceIn" data-delay="0.2s">ECƎ Resources</h1>
+                                    <h1 data-animation="bounceIn" data-delay="0.2s">ECE Resources</h1>
                                     <!-- breadcrumb Start-->
                                     <nav aria-label="breadcrumb">
                                         <ol class="breadcrumb">
