--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/Nav.css">
     
+    
 </head>
 
 <body>
@@ -64,6 +65,7 @@
                                                 <li class="active" ><a href="index.html">Home</a></li>
                                                 <li><a href="courses.html">ECE</a></li>
                                                 <li><a href="about.html">About</a></li>
+                                                <li><a href="events.html">Events</a></li>
                                                 <li><a href="#">Resources</a>
                                                     <ul class="submenu">
                                                         <li><a href="pyqs.html">Academic Materials</a></li>
